--- a/gardensomething/styles/small.css
+++ b/gardensomething/styles/small.css
@@ -1,4 +1,4 @@
-/* Small screen styles: 320px–640px */
+/* GARDEN SOMETHING!!!!!!!!!!!!!!! Small screen styles: 320px–640px */
 @media screen and (max-width: 640px) {
     .hero {
         height: 50vh;
