--- a/gardensomething/styles/large.css
+++ b/gardensomething/styles/large.css
@@ -1,4 +1,8 @@
 /* Large screen styles: 1025px+ */
 @media (min-width: 1025px) {
+    .top-header h1 {
+        font-size: 4rem;
+        padding-left: 20px;
+    }
     
 }
