--- a/gardensomething/styles/small.css
+++ b/gardensomething/styles/small.css
@@ -1,12 +1,49 @@
 /* GARDEN SOMETHING!!!!!!!!!!!!!!! Small screen styles: 320px–640px */
-@media screen and (max-width: 640px) {
-    .hero {
-        height: 50vh;
-        flex-direction: column;
-        text-align: center;
-      }
-    
-      .hero-content h1 {
-        font-size: 1.5rem;
-      }
+@media screen and (max-width: 484px) {
+  #menu {
+    display:none;
+  }
+  .top-header h1 {
+    display: none;
+  }
+  #menu-toggle {
+    font-size: 4rem;
+    overflow: hidden;
+    z-index: 9;
+  }
+  .logo{
+    z-index: 10;
+  }
+  .hero {
+    height: 50vh;
+    flex-direction: column;
+    text-align: center;
+  }
+  .hero-content h1 {
+    font-size: 1.5rem;
+  }
+
+}
+@media screen and (min-width: 485px) and (max-width: 640px) {
+  
+  #menu {
+    display:none;
+  }
+  #menu-toggle {
+    font-size: 4rem;
+    overflow: hidden;
+    z-index: 9;
+  }
+  .logo{
+    z-index: 10;
+  }
+  .hero {
+      height: 50vh;
+      flex-direction: column;
+      text-align: center;
+  }
+  .top-header h1 {
+    font-size: 2.5rem;
+    padding-left: 20px;
+}
 }
