--- a/gardensomething/styles/base.css
+++ b/gardensomething/styles/base.css
@@ -229,6 +229,63 @@ button:hover,.hero-button:hover {
     width: 100%;
     height: auto;
 }
+/*join/request page */
+/*paste from styles.css edit to here*/
+dialog {
+    padding: 20px;
+    justify-content: center;
+    border-radius: var(--border-radius);
+}
+dialog button{
+    background-color: var(--primary-color);
+    box-shadow: var(--box-shadow);
+    animation: fadeIn 5s ease-in;
+    border-radius: var(--border-radius);  
+}
+.join-section {
+    display: grid;
+    grid-template-columns:1fr 1fr;
+    grid-template-rows: auto auto auto;
+    gap: 20px;
+    margin: 20px;
+    border-radius: 10px;
+    align-items: stretch;
+    background-color: var(--background-color);
+    max-width: 100%;
+    overflow-x: hidden; 
+}
+.membership-content, .form-section {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height:100%;
+}
+.membership-content {
+    grid-column: 1/2;
+    grid-row: 2;
+}
+.form-section {
+    background-color: var(--secondary-color);
+    grid-column: 2/3;
+    grid-row:2;
+}
+#form label {
+    display: grid;
+    padding: 10px;
+    font-size: 1rem;
+}
+#form input {
+    border-radius: 5px;
+    padding:10px;
+}
+#form textarea, option {
+    border-radius: 5px;
+    padding:10px;
+}
+#thankyou{
+    padding: 10px;
+}
+/*paste from styles.css edit to here*/
 /*companies card grid */
 .cards-container {
     display: grid;
