--- a/gardensomething/styles/base.css
+++ b/gardensomething/styles/base.css
@@ -236,6 +236,7 @@ button:hover,.hero-button:hover {
 }
 /*join/request page */
 /*paste from styles.css edit to here*/
+/* ................................................*/
 dialog {
     padding: 20px;
     justify-content: center;
@@ -259,13 +260,13 @@ dialog button{
     max-width: 100%;
     overflow-x: hidden; 
 }
-.membership-content, .form-section {
+.hardiness-content, .form-section {
     display:flex;
     flex-direction: column;
     justify-content: space-between;
     height:100%;
 }
-.membership-content {
+.hardiness-content {
     grid-column: 1/2;
     grid-row: 2;
 }
@@ -291,15 +292,66 @@ dialog button{
     padding: 10px;
 }
 /*paste from form/join styles.css edit to here*/
+/* ................................................*/
 /*companies card grid */
 .cards-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
     grid-area: "cards";
     width: 100%;
+    height: 100%;
     padding: 10px;
 }
+.card{
+    border: 1px solid;
+  border-color: var(--text-color);
+  padding: 1rem;
+  background: var(--light-color);
+  border-radius: var(--border-radius);
+  text-align: center;
+  box-shadow: var(--box-shadow);
+}
+.card img {
+    width: 100%;
+    height: 100%;
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
+
+}
+/* .................................this is good  */
+#seed-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+    width: 100%;
+    height: 100%;
+}
+.seed-card {
+  border: 1px solid;
+  border-color: var(--text-color);
+  padding: 1rem;
+  background: var(--light-color);
+  border-radius: var(--border-radius);
+  text-align: center;
+  box-shadow: var(--box-shadow);
+}
+.seed-card img {
+  width: 100%;
+  max-height: 150px;
+  max-width: 200px;
+  object-fit: cover;
+  border-radius: var(--border-radius);
+}
+.zone-buttons button {
+    font-weight:var(--bold);
+    padding:1rem;
+    background-color: var(--secondary-color);
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
+
+}
+/* ................................................*/
 .foot-container {
     display: flex;
     flex-wrap: wrap;
@@ -330,4 +382,6 @@ dialog button{
     width: 50px; 
     height: 50px; 
     object-fit: contain;
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
 }
